...
    <string name="mdbx_create_new_vault_button">Create New Vault</string>
    <string name="mdbx_your_vaults">Your Vaults</string>
    <string name="mdbx_delete_vault_title">Delete Vault</string>
    <string name="mdbx_delete_vault_message">Are you sure you want to delete \"%s\"?\n\nThis will only remove the local reference. The file on WebDAV will not be deleted.</string>
    <string name="mdbx_delete">Delete</string>
    <string name="mdbx_cancel">Cancel</string>
    <string name="mdbx_set_default">Set as default</string>
    <string name="mdbx_default_badge">Default</string>
    <string name="mdbx_operations_dashboard_title">MDBX operations</string>
    <string name="mdbx_status_conflicts">Conflicts</string>
    <string name="mdbx_status_health">Health</string>
    <string name="mdbx_status_delta">Delta</string>
    <string name="mdbx_status_attachments">Attachments</string>
...
    <string name="mdbx_health_ok_short">OK</string>
    <string name="mdbx_status_loading">Loading</string>
    <string name="mdbx_commit_tombstone_short">%1$d commits · %2$d deletes</string>
    <string name="mdbx_attachment_short">%1$d files · %2$d external · %3$s</string>
    <string name="mdbx_dashboard_attachment_value">%1$d external</string>
    <string name="mdbx_dashboard_vault_count">%1$d vaults tracked locally</string>
    <string name="mdbx_sync_status_label">Sync</string>
    <string name="mdbx_compatibility_label">Format</string>
    <string name="mdbx_format_tiga_value">%1$s · Tiga %2$s</string>
    <string name="mdbx_recovery_label">Recovery</string>
    <string name="mdbx_recovery_clean">Integrity clean</string>
    <string name="mdbx_recovery_issue_value">%1$d references · %2$s</string>
    <string name="mdbx_file_size_label">File</string>
...
